css/index.css
* {
    box-sizing: border-box;
}

html {
    font-size: 12px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
    width: 100%;
    height: 100%;
    background-color: #333333 !important;
    color: white !important;
    font-family: 'Libre Franklin', sans-serif !important;
}

h1{
    padding-left: 200px;
    padding-right: 200px;
    font-size: 50px !important;
    font-family: 'Merriweather', serif !important;
    padding-top: 20px;
}

figcaption{
    color: lightgrey;
    font-size: 13px;
}

h3{
    padding-left: 200px;
    padding-right: 200px;
}

.top-100{
    font-size: 40px !important;
    padding-left: 200px;
    padding-right: 200px;
}

p{
    padding-left: 200px;
    padding-right: 200px;
}

.container {
    margin-left: auto;
    margin-right: auto;
    width: min(100%, 1000px);
    padding: 0px !important;
}

.narrative {
    font-size: 1.5rem;
}

.streamer-pic {
    width:100%;
}

#streamer-icons {
    display: flex;
    flex-flow: row wrap;
    padding: 4px;
}

.icon {
    width: 45px;
    height: 45px;
    background-color: blueviolet;
    padding: 2px;
    margin: 2px;
}

a {
    color: blueviolet !important;
}


.icon-large {
    width: 94px;
    height: 94px;
    background-color: blueviolet;
    padding: 4px;
}

.icon > img, .icon-large > img {
    width: 100%;
    height: 100%;
    background-color: white;
}

#streamer-panel {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

#streamer-small-chart {
    width: 100%;
}

.streamer-title {
    font-size: 4em;
    font-weight: bold;
    line-height: 1.5;
}

.streamer-field {
    font-size: 2em;
    line-height: 1.5;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.streamer-field > .label {
    font-variant: small-caps;
    color: blueviolet;
}

.streamer-field > .value {
    font-weight: bold;
}

#selection-panel {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.selection-group {
    border: 2px solid blueviolet;
    padding: 4px;
}

#gantt-chart-container {
    display: flex;
    width: 100%;
}

#gantt-chart-svg {
    margin: auto;
}

#gantt-content {
    padding-top: 10px;
}

